--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-lg-2" id="test"></div>
                 <div class="col-12 col-lg-8" id="boxHangman">
-                    <div class="text-right">Your mistakes : <span id='mistakes'>0</span> of <span id="maxWrong"></span>
+                    <div class="text-right">error(s) : <span id='mistakes'>0</span> of <span id="maxWrong"></span>
                     </div>
                     <img id="hangman" src="assets/img/hangman0.png">
                 </div>
